--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -476,7 +476,7 @@ service debuggerd /system/bin/debuggerd
 service surfaceflinger /system/bin/surfaceflinger
     class main
     user system
-    group graphics drmrpc
+    group graphics drmrpc system
     onrestart restart zygote
 
 service zygote /system/bin/app_process -Xzygote /system/bin --zygote --start-system-server
